# tex2image

./: .pre-commit-config.yaml  .readthedocs.yml  .release-please-manifest.json  CHANGELOG.md  Dockerfile  README.md  flake.nix  justfile  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: publish.yml  release-please.yml
docs/: client.md  index.md  rendering.md  server.md
examples/directly_in_browser/: README.md
examples/discord_bot/: README.md  bot.py
examples/flask_app/: README.md  app.py
src/tex2image/: __init__.py  client.py  rendering.py  server.py
