[project]
name = "tex2image"
version = "0.1.0"  # x-release-please-version
description = "A simple python library for converting latex snippets to images."
readme = "README.md"
authors = [
    { name = "Olympiad Bot", email = "olybot@ggim.me" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
