[project]
name = "tex2image"
version = "0.1.5"
description = "A simple python library for converting latex snippets to images."
readme = "README.md"
authors = [
    { name = "Olympiad Bot", email = "olybot@ggim.me" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
server = [
    "click>=8.2.1",
    "fastapi[standard]>=0.115.13",
    "starlette>=0.46.2",
    "uvicorn>=0.34.3",
]
examples = [
    "certifi>=2025.4.26",
    "discord.py>=2.7.1",
    "flask>=3.1.1",
    "tex2image[client]==0.1.5",
]
client = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "just>=0.8.165",
    "mypy>=1.20.0",
    "types-requests>=2.33.0.20260408",
]
docs = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings-python>=1.16.12",
    "pymdown-extensions>=10.15",
]

[tool.uv.workspace]
members = [
    "examples/from_source",
]

[project.scripts]
tex2image-server = "tex2image.server:_tex2image_server"
